# agents

./: .gitignore
advisor_productivity_app/: DEPLOY_README.md  Dockerfile  README.md  deploy.bat  deploy.ps1  docker-compose.yml
advisor_productivity_app/backend/: .env.example  README.md  requirements.txt  start.ps1
advisor_productivity_app/backend/app/: __init__.py  main.py
advisor_productivity_app/frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
advisor_productivity_app/frontend/src/: App.css  App.tsx  index.css  types.ts
deep_research_app/: .dockerignore  DEPLOY_README.md  Dockerfile  README.md  deploy.bat  deploy.ps1  setup.ps1
deep_research_app/backend/: .env.example  .gitignore  README.md  requirements.txt
deep_research_app/backend/app/: advanced_research.py  main.py  (+1 more)
deep_research_app/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  QUICKSTART.md  README.md  RESEARCH_DEPTH_ANALYSIS.md
deep_research_app/examples/: maf_workflow_example.py
deep_research_app/frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
deep_research_app/workflows/: deep_research.yaml
docs/: README.md
docs/framework/: architecture.md  msft-agent-framework.md  pattern-reference.md
docs/hackathon/: 01-maf-overview.md  02-framework-architecture.md  03-orchestration-patterns.md  04-agent-implementation.md  05-reference-apps.md  06-development-guide.md  06-hackathon-implementation.md  07-development-guide.md  08-advanced-topics.md  DEEP_RESEARCH_DECISION_GUIDE.md  DEEP_RESEARCH_GUIDE.md  DEEP_RESEARCH_PATTERNS.md  DEEP_RESEARCH_QUICKSTART.md  DEEP_RESEARCH_README.md  README.md
docs/reference-app/: overview.md
finagent_app/: AGENT_REFACTORING_GUIDE.md  Dockerfile  GETTING_STARTED.md  README.md  deploy.ps1  deploy_mcp.ps1
finagent_app/backend/: requirements.txt
finagent_app/docs/: AGENT_OUTPUT_VIEWING.md
finagent_app/frontend/: package-lock.json  package.json
finagent_app/scripts/: dev.ps1  setup_frontend.ps1
finagent_dynamic_app/: Dockerfile  GETTING_STARTED.md  README.md  deploy.bat  deploy.ps1  dev.ps1
finagent_dynamic_app/backend/: .env.example  .env.template  README.md  requirements.txt  start.ps1
finagent_dynamic_app/docs/: QUICKSTART.md  README.md  SYNTHESIS_AGENT_PATTERN.md
finagent_dynamic_app/frontend/: README.md  index.html  package-lock.json  package.json  start.ps1  tailwind.config.js  vite.config.ts
finagent_dynamic_app/scripts/: setup_backend.ps1
framework/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  install_dev.py  magentic_config.yaml  main.py  pyproject.toml  pyproject.toml.setup  requirements.txt  setup.py
framework/agents/: __init__.py  base.py  factory.py
framework/api/: __init__.py  service.py
framework/config/: __init__.py  settings.py
framework/core/: __init__.py  observability.py  orchestrator.py  planning.py  registry.py  security.py
framework/examples/: basic_usage.py  complete_usage.py  custom_research.py  deep_research_cli.py  deep_research_enhanced.py  test_deep_research.py  test_direct_agents.py  test_enhanced_research.py  test_variable_substitution.py  workflow_usage.py
framework/examples/workflows/: customer_service.yaml  data_processing.yaml  deep_research.yaml  test_variables.yaml
framework/mcp_integration/: __init__.py  client.py  maf_adapter.py  server.py  tools.py
framework/patterns/: __init__.py  concurrent.py  group_chat.py  handoff.py  hierarchical.py  react.py  sequential.py
framework/workflows/: __init__.py  engine.py
multimodal_insights_app/: .dockerignore  .gitignore  DEPLOY_README.md  Dockerfile  README.md  deploy.bat  deploy.ps1  dev.ps1
multimodal_insights_app/backend/: .env.example  requirements.txt  start.ps1
multimodal_insights_app/docs/: ARCHITECTURE.md  AZURE_AUTHENTICATION.md  MAF_INTEGRATION.md  MAF_PATTERN_INTEGRATION.md  QUICKSTART.md  README.md
multimodal_insights_app/frontend/: README.md  index.html  package.json  start.ps1  tailwind.config.js
multimodal_insights_app/scripts/: dev.ps1
patterns/: Dockerfile  README.md  deploy.bat  deploy.ps1  start.bat  start.ps1  start.sh
patterns/backend/: .env.example  __init__.py  api.py  cli.py  requirements.txt  validate.py
patterns/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+233 files in other folders)
